Added ' for students' section

--- a/home.htm
+++ b/home.htm
@@ -65,7 +65,7 @@
 		          	<div class="text">
 		          		<span class="subheading pl-5"></span>
 			            <h1 class="mb-4 mt-3">Introducing WorkWithUs</h1>
-			            <p>A place to get things done.Our team takes charge of your project from its incepion and ensures it'scompletion,while you lay back and relax.Managemant,execution and those are three golden wordd.Tell us what to do and we will do it.</p>
+			            <p>A place to get things done. Our team takes charge of your project from its incepion and ensures it's completion, while you lay back and relax. Planning, managemant, execution and those are three golden words. Tell us what to do and we will do it.</p>
 			            
 			            <p><a href="#" class="btn btn-primary px-5 py-3 mt-3">Get Started<span class="ion-ios-arrow-forward"></span></a></p>
 		            </div>
@@ -79,7 +79,7 @@
 	    </div>
     </section>
 
-    <!--<section class="ftco-section ftco-no-pb ftco-no-pt">
+   <!--<section class="ftco-section ftco-no-pb ftco-no-pt">
     	<div class="container">
     		<div class="row justify-content-center pb-0 pb-mb-5 pt-5 pt-md-0">
           <div class="col-md-12 heading-section ftco-animate">
@@ -167,7 +167,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h2 class="mb-1"><b>WHY US?</b></h2><hr>
             <h2 class="mb-1">For Recruiters</h2>
-            <p>Get best students from our platform and get access to theirstunning innovativeness and new point of view to assist you with your undertakings.</p>
+            <p>Get best students from our platform and get access to their stunning innovativeness and new point of view to assist you with your undertakings.</p>
           </div>
         </div>
         <div class="row">
@@ -195,6 +195,60 @@
               <div class="media-body">
                 <h3 class="heading mb-3">Estimates</h3>
                 <p>Our freelancers work remotely for a fraction of the expence you would pay customarily in an office setting.</p>
+              </div>
+            </div>      
+          </div>
+         <!-- <div class="col-md d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services text-center d-block">
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-map-of-roads"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">Location Manager</h3>
+                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              </div>
+            </div>      
+          </div>
+        </div>-->
+			</div>
+		</section>
+
+		<section class="ftco-section ftco-services-2" id="services-section">
+			<div class="container">
+				<div class="row justify-content-center pb-5">
+          <div class="col-md-12 heading-section text-center ftco-animate">
+          	<h2 class="mb-1"><b>WHY US?</b></h2><hr>
+            <h2 class="mb-1">For Students</h2>
+            <p>We offer each student a chance to do a entry level positions
+							with assoiations and people, to investigate an understudy's capablity to most extreme
+							and convey a quintessential change to the understudy assosiation
+							environment.
+						</p>
+          </div>
+        </div>
+        <div class="row">
+        	<div class="col-md d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services text-center d-block">
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-gliding"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">Build your resume</h3>
+                <p>Develope your skills and improve your resume working on various projets.</p>
+              </div>
+            </div>      
+          </div>
+          <div class="col-md d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services text-center d-block">
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-world"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">Earn while you learn</h3>
+                <p>Earn some bucks while learning new technologies and making projects with them.</p>
+              </div>
+            </div>      
+					</div>
+					<div class="col-md d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services text-center d-block">
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-tour-guide"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">Network</h3>
+                <p>Connetc with other students to team up for your next project or startup. </p>
               </div>
             </div>      
           </div>
