--- a/home.htm
+++ b/home.htm
@@ -54,7 +54,7 @@
 	        <div class="container-fluid p-0">
 	          <div class="row d-md-flex no-gutters slider-text align-items-center justify-content-end" data-scrollax-parent="true">
 	          	<div class="one-third order-md-last">
-	          		<div class="img" style="background-image:url(images/work.jpg);">
+	          		<div class="img" style="background-image:url(images/work4.jpg);">
 	          			<div class="overlay"></div>
 	          		</div>
 	          		<div class="bg-primary">
@@ -182,7 +182,7 @@
           </div>
           <div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-world"></span></div>
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-manager"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Painless Managemant</h3>
                 <p> We take care of your project from scope to delivery.In short we get your shit done.</p>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-tour-guide"></span></div>
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-layers"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Estimates</h3>
                 <p>Our freelancers work remotely for a fraction of the expence you would pay customarily in an office setting.</p>
@@ -215,7 +215,7 @@
 			<div class="container">
 				<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h2 class="mb-1"><b>WHY US?</b></h2><hr>
+          <!--	<h2 class="mb-1"><b>WHY US?</b></h2><hr>-->
             <h2 class="mb-1">For Students</h2>
             <p>We offer each student a chance to do a entry level positions
 							with assoiations and people, to investigate an understudy's capablity to most extreme
@@ -227,7 +227,7 @@
         <div class="row">
         	<div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-gliding"></span></div>
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-wallet"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Build your resume</h3>
                 <p>Develope your skills and improve your resume working on various projets.</p>
@@ -236,7 +236,7 @@
           </div>
           <div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-world"></span></div>
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-tour-guide"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Earn while you learn</h3>
                 <p>Earn some bucks while learning new technologies and making projects with them.</p>
@@ -245,7 +245,7 @@
 					</div>
 					<div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-tour-guide"></span></div>
+              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-world"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Network</h3>
                 <p>Connetc with other students to team up for your next project or startup. </p>
