removes WHY US above for students

--- a/home.htm
+++ b/home.htm
@@ -54,7 +54,7 @@
 	        <div class="container-fluid p-0">
 	          <div class="row d-md-flex no-gutters slider-text align-items-center justify-content-end" data-scrollax-parent="true">
 	          	<div class="one-third order-md-last">
-	          		<div class="img" style="background-image:url(images/work4.jpg);">
+	          		<div class="img" style="background-image:url(images/work.jpg);">
 	          			<div class="overlay"></div>
 	          		</div>
 	          		<div class="bg-primary">
