--- a/home.htm
+++ b/home.htm
@@ -230,7 +230,7 @@
               <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-gliding"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Build your resume</h3>
-                <p>Develope your skills and improve your resume working on various projets.</p>
+                <p >Develope your skills and improve your resume working on various projets.</p>
               </div>
             </div>      
           </div>
@@ -265,6 +265,20 @@
 			</div>
 		</section>
 
+		<section class="ftco-intro img" id="destination-section" style="background-image: url(images/work9.jpg);">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-md-9 text-center">
+						<h2>UPGRADE YOUR RESUME:</h2>
+						<p>Replace your objective statement with an executive summary.</p>
+					<!--	<p class="mb-0"><a href="#" class="btn btn-white px-4 py-3"></a></p>-->
+					</div>
+				</div>
+			</div>
+		</section>
+		<br><br><br>
+
 		<section class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
     	<div class="container">
     		<div class="row no-gutters d-flex">
@@ -290,18 +304,7 @@
     	</div>
     </section>
 
-    <section class="ftco-intro img" id="destination-section" style="background-image: url(images/bg_3.jpg);">
-			<div class="overlay"></div>
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-md-9 text-center">
-						<h2>Choose the Perfect Destination</h2>
-						<p>We can manage your dream building A small river named Duden flows by their place</p>
-						<p class="mb-0"><a href="#" class="btn btn-white px-4 py-3">Search Places</a></p>
-					</div>
-				</div>
-			</div>
-		</section>
+    
 
     <section class="ftco-section">
     	<div class="container">
