--- a/home.htm
+++ b/home.htm
@@ -166,8 +166,8 @@
 				<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h2 class="mb-1"><b>WHY US?</b></h2><hr>
-            <h2 class="mb-1">For Recruiters</h2>
-            <p>Get best students from our platform and get access to their stunning innovativeness and new point of view to assist you with your undertakings.</p>
+            <h2 class="mb-1" >For Recruiters</h2>
+            <p style="color: rgb(19, 87, 87)">Get best students from our platform and get access to their stunning innovativeness and new point of view to assist you with your undertakings.</p>
           </div>
         </div>
         <div class="row">
@@ -175,8 +175,8 @@
             <div class="media block-6 services text-center d-block">
               <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-gliding"></span></div>
               <div class="media-body">
-                <h3 class="heading mb-3">Superior work</h3>
-                <p>We provde the highest quality of work for any company size,tech stack and every environment.</p>
+                <h3 class="heading mb-3" style="color: blue">Superior work</h3>
+                <p style="color: black">We provde the highest quality of work for any company size,tech stack and every environment.</p>
               </div>
             </div>      
           </div>
@@ -184,8 +184,8 @@
             <div class="media block-6 services text-center d-block">
               <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-manager"></span></div>
               <div class="media-body">
-                <h3 class="heading mb-3">Painless Managemant</h3>
-                <p> We take care of your project from scope to delivery.In short we get your shit done.</p>
+                <h3 class="heading mb-3" style="color: blue">Painless Managemant</h3>
+                <p style="color: black"> We take care of your project from scope to delivery.In short we get your shit done.</p>
               </div>
             </div>      
           </div>
@@ -193,8 +193,8 @@
             <div class="media block-6 services text-center d-block">
               <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-layers"></span></div>
               <div class="media-body">
-                <h3 class="heading mb-3">Estimates</h3>
-                <p>Our freelancers work remotely for a fraction of the expence you would pay customarily in an office setting.</p>
+                <h3 class="heading mb-3" style="color: blue">Estimates</h3>
+                <p style="color: black">Our freelancers work remotely for a fraction of the expence you would pay customarily in an office setting.</p>
               </div>
             </div>      
           </div>
@@ -217,7 +217,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           <!--	<h2 class="mb-1"><b>WHY US?</b></h2><hr>-->
             <h2 class="mb-1">For Students</h2>
-            <p>We offer each student a chance to do a entry level positions
+            <p style="color: rgb(19, 87, 87)">We offer each student a chance to do a entry level positions
 							with assoiations and people, to investigate an understudy's capablity to most extreme
 							and convey a quintessential change to the understudy assosiation
 							environment.
@@ -229,8 +229,8 @@
             <div class="media block-6 services text-center d-block">
               <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-wallet"></span></div>
               <div class="media-body">
-                <h3 class="heading mb-3">Build your resume</h3>
-                <p >Develope your skills and improve your resume working on various projets.</p>
+                <h3 class="heading mb-3" style="color: blue">Build your resume</h3>
+                <p style="color: black">Develope your skills and improve your resume working on various projets.</p>
               </div>
             </div>      
           </div>
@@ -238,8 +238,8 @@
             <div class="media block-6 services text-center d-block">
               <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-tour-guide"></span></div>
               <div class="media-body">
-                <h3 class="heading mb-3">Earn while you learn</h3>
-                <p>Earn some bucks while learning new technologies and making projects with them.</p>
+                <h3 class="heading mb-3" style="color: blue">Earn while you learn</h3>
+                <p style="color: black">Earn some bucks while learning new technologies and making projects with them.</p>
               </div>
             </div>      
 					</div>
@@ -247,8 +247,8 @@
             <div class="media block-6 services text-center d-block">
               <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-world"></span></div>
               <div class="media-body">
-                <h3 class="heading mb-3">Network</h3>
-                <p>Connetc with other students to team up for your next project or startup. </p>
+                <h3 class="heading mb-3" style="color: blue">Network</h3>
+                <p style="color: black">Connetc with other students to team up for your next project or startup. </p>
               </div>
             </div>      
           </div>
