changes in icons, edit images , buttons design

--- a/home.htm
+++ b/home.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ecoland - Free Bootstrap 4 Template by Colorlib</title>
+    <title>WorkWithUs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -54,11 +54,11 @@
 	        <div class="container-fluid p-0">
 	          <div class="row d-md-flex no-gutters slider-text align-items-center justify-content-end" data-scrollax-parent="true">
 	          	<div class="one-third order-md-last">
-	          		<div class="img" style="background-image:url(images/work.jpg);">
+	          		<div class="img" style="background-image:url(images/work11.jpg);height: 680px;border-radius:20px;box-shadow: 0px 0px 10px rgb(32, 32, 32);">
 	          			<div class="overlay"></div>
 	          		</div>
 	          		<div class="bg-primary">
-		          		<div class="vr"><span class="pl-3 py-4" style="background-image: url(images/work1.jpg);">Greece</span></div>
+		          		<div class="vr"><span class="pl-3 py-4" style="background-image: linear-gradient(blue,green,blue,green,blue); box-shadow: 0px 0px 10px rgb(54, 53, 53);">WorkWithUs</span></div>
 	          		</div>
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -67,7 +67,7 @@
 			            <h1 class="mb-4 mt-3">Introducing WorkWithUs</h1>
 			            <p>A place to get things done. Our team takes charge of your project from its incepion and ensures it's completion, while you lay back and relax. Planning, managemant, execution and those are three golden words. Tell us what to do and we will do it.</p>
 			            
-			            <p><a href="#" class="btn btn-primary px-5 py-3 mt-3">Get Started<span class="ion-ios-arrow-forward"></span></a></p>
+			            <p><a href="#" class="btn btn-info px-5 py-3 mt-3">Get Started<span class="ion-ios-arrow-forward"></span></a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -173,7 +173,7 @@
         <div class="row">
         	<div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-gliding"></span></div>
+              <div class="img justify-content-center align-items-center d-flex"><span class=><img src="images/superiorwork.png" height="120px" width="auto"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3" style="color: blue">Superior work</h3>
                 <p style="color: black">We provde the highest quality of work for any company size,tech stack and every environment.</p>
@@ -182,7 +182,7 @@
           </div>
           <div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-manager"></span></div>
+              <div class="img justify-content-center align-items-center d-flex"><span><img src="images/management.png"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3" style="color: blue">Painless Managemant</h3>
                 <p style="color: black"> We take care of your project from scope to delivery.In short we get your shit done.</p>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-layers"></span></div>
+              <div class="img justify-content-center align-items-center d-flex"><span><img src="images/estimate.png" height="120px" width="auto"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3" style="color: blue">Estimates</h3>
                 <p style="color: black">Our freelancers work remotely for a fraction of the expence you would pay customarily in an office setting.</p>
@@ -227,7 +227,7 @@
         <div class="row">
         	<div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-wallet"></span></div>
+              <div class="img justify-content-center align-items-center d-flex"><span><img src="images/resume.png" height="120px" width="auto"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3" style="color: blue">Build your resume</h3>
                 <p style="color: black">Develope your skills and improve your resume working on various projets.</p>
@@ -236,7 +236,7 @@
           </div>
           <div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-tour-guide"></span></div>
+              <div class="img justify-content-center align-items-center d-flex"><span><img src="images/earning-statements.png" height="120px" width="auto"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3" style="color: blue">Earn while you learn</h3>
                 <p style="color: black">Earn some bucks while learning new technologies and making projects with them.</p>
@@ -245,7 +245,7 @@
 					</div>
 					<div class="col-md d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services text-center d-block">
-              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-world"></span></div>
+              <div class="img justify-content-center align-items-center d-flex"><span><img src="images/net.png" height="115px" width="auto"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3" style="color: blue">Network</h3>
                 <p style="color: black">Connetc with other students to team up for your next project or startup. </p>
