--- a/home.htm
+++ b/home.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ecoland - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Cyfle</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -37,17 +37,14 @@
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span><b>Services</b></span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span><b>About Us</b></span></a></li>
 	          <li class="nav-item"><a href="#destination-section" class="nav-link"><span><b>Join Us</b></span></a></li>
-	          <!--<li class="nav-item"><a href="#hotel-section" class="nav-link"><span></span></a></li>
-	          <li class="nav-item"><a href="#restaurant-section" class="nav-link"><span>Restaurant</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
-	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>-->
+	         
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
 	  
 	  <section id="home-section" class="hero">
-	  	<img src="images/blob-shape-3.svg" class="svg-blob" alt="Colorlib Free Template">
+	  	<img src="images/blob-shape-3.svg" class="svg-blob">
 		  <div class="home-slider owl-carousel">
 	      <div class="slider-item">
 	      	<div class="overlay"></div>
